5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1593_2426.log
== TEST (2019-03-31 18:00:44) 
-- CODE:
tempo = input()
velocidade = input()
distancia =print(tempo/valocidade)
quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    quantidade =#a autonomia do veiculo e de 12km com um litro
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:01:17) 
-- CODE:
tempo = input()
velocidade = input()
distancia =print(tempo/valocidade)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia =print(tempo/valocidade)
NameError: name 'valocidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:25:25) 
-- CODE:
tempo = input()
velocidade = input()
#distancia =
print(tempo*velocidade)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(tempo*velocidade)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:26:35) 
-- CODE:
tempo = input("***")
velocidade = input("**")
#distancia =
print(tempo*velocidade)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(tempo*velocidade)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:29:15) 
-- CODE:
tempo = float(input("***")
velocidade = float((input("**")
#distancia =
print(tempo*velocidade)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 2
    velocidade = float((input()
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:30:31) 
-- CODE:
tempo = float(input("***"))
velocidade = float((input("**"))
#distancia =
print(tempo*velocidade)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    print(tempo*velocidade)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:30:58) 
-- CODE:
tempo = float(input("***"))
velocidade = float((input("**"))
#distancia =
print( tempo * velocidade )
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    print( tempo * velocidade )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:32:03) 
-- CODE:
t= float(input("***"))
v= float((input("**"))
#distancia =
print(t*v)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    print(t*v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:33:09) 
-- CODE:
t= float(input("***"))
v= float((input("**"))
#distancia =
subtotal=(t*v)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    subtotal=(t*v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:35:25) 
-- CODE:
t = float(input("***"))
v = float((input("**"))
#distancia =
subtotal = t*v
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    subtotal = t*v
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:35:47) 
-- CODE:
t = float(input("***"))
v = float((input("**"))
#distancia =
subtotal = t * v
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    subtotal = t * v
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:36:02) 
-- CODE:
t = float(input("***"))
v = float((input("**"))
#distancia =
subtotal = t * v
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    subtotal = t * v
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:36:26) 
-- CODE:
t = float(input("***"))
b = float((input("**"))
#distancia =
subtotal = t * b
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    subtotal = t * b
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:36:47) 
-- CODE:
t = float(input("***"))
b = float((input("**"))
#distancia =
total = t * b
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    total = t * b
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:37:29) 
-- CODE:
t = float(input("***"))
b = float((input("**"))
#distancia =
m= t * b
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    m= t * b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:38:16) 
-- CODE:
t = float(input("***"))
b = float((input("**"))
#distancia =
m =print(t * b)
#quantidade =#a autonomia do veiculo e de 12km com um litro


-- ERROR:
File "XXXX", line 4
    m =print(t * b)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:24:33) 
-- CODE:
t = float(input("tempo"))
b = float((input("*velocidade"))
m =v*t
print(m)





-- ERROR:
File "XXXX", line 3
    m =v*t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:25:04) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m =t*v
print(m)





-- ERROR:
File "XXXX", line 3
    m =t*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:25:18) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m = t * v
print(m)





-- ERROR:
File "XXXX", line 3
    m = t * v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:03) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m1 = t * v
print(m1)





-- ERROR:
File "XXXX", line 3
    m1 = t * v
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:04) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m1 = t * v
print(m1)





-- ERROR:
File "XXXX", line 3
    m1 = t * v
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:04) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m1 = (t * v)
print(m1)





-- ERROR:
File "XXXX", line 3
    m1 = (t * v)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:04) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m1 = (t * v)
print(m1)





-- ERROR:
File "XXXX", line 3
    m1 = (t * v)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:04) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m1 = (t * v)
print(m1)





-- ERROR:
File "XXXX", line 3
    m1 = (t * v)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:04) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
m1 = (t * v)
print(m1)





-- ERROR:
File "XXXX", line 3
    m1 = (t * v)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:04) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
x= (t*v)
print(m1)





-- ERROR:
File "XXXX", line 3
    x= (t*v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:16) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
x= (t*v)
print(x)





-- ERROR:
File "XXXX", line 3
    x= (t*v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:37) 
-- CODE:
t = float(input("tempo"))
v = float((input("*velocidade"))
x = (t*v)
print(x)





-- ERROR:
File "XXXX", line 3
    x = (t*v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:27:55) 
-- CODE:
t = float(input("tempo"))
l = float((input("*velocidade"))
x = (t*l)
print(x)





-- ERROR:
File "XXXX", line 3
    x = (t*l)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:28:26) 
-- CODE:
t = float((input("tempo"))
l = float((input("*velocidade"))
x = (t*l)
print(x)





-- ERROR:
File "XXXX", line 2
    l = float((input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:28:36) 
-- CODE:
t = float((input("tempo"))
l = float((input("velocidade"))
x = (t*l)
print(x)





-- ERROR:
File "XXXX", line 2
    l = float((input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:29:32) 
-- CODE:
t = float((input("tempo"))
l = float((input("velocidade"))
x = t*l
print(x)





-- ERROR:
File "XXXX", line 2
    l = float((input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:30:01) 
-- CODE:
t = float(input("tempo"))
l = float(input("velocidade"))
x = t*l
print(x)





-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:35:25) 
-- CODE:
t = float(input("tempo"))
l = float(input("velocidade"))
x = t*l
print(x)
y=150/12.5
print(y)





-- OUTPUT:
900.0
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:38:54) 
-- CODE:
t = float(input("tempo"))
l = float(input("velocidade"))
x = t*l
print(x)
y=x/11
print(y)





-- OUTPUT:
900.0
81.81818181818181
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:39:17) 
-- CODE:
t = float(input("tempo"))
l = float(input("velocidade"))
x = t*l
print(x)
y=x/12
print(y)





-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:39:34) 
-- CODE:
t = float(input("tempo"))
l = float(input("velocidade"))
x = t*l
print(x)
y=x/12
print(y)





-- EXECUTION TIME:
0.171167
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
